2.代码沙箱实现(2)——安全管理